// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`geometry snapshot CI > stable box-only layout (rounded) 1`] = `
{
  "children": [],
  "height": 64,
  "width": 120,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable column flex with gap and two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 10,
    },
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 34,
    },
  ],
  "height": 120,
  "width": 160,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable column with asymmetric per-edge padding and text child (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 160,
      "x": 14,
      "y": 10,
    },
  ],
  "height": 100,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable column with in-flow text and absolutely positioned box (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 80,
      "x": 6,
      "y": 6,
    },
    {
      "children": [],
      "height": 28,
      "width": 44,
      "x": 22,
      "y": 14,
    },
  ],
  "height": 100,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable column with in-flow text and absolutely positioned box via right/bottom (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 80,
      "x": 6,
      "y": 6,
    },
    {
      "children": [],
      "height": 26,
      "width": 48,
      "x": 140,
      "y": 64,
    },
  ],
  "height": 100,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable column with in-flow text and relatively positioned box with top/left (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 80,
      "x": 6,
      "y": 6,
    },
    {
      "children": [],
      "height": 26,
      "width": 44,
      "x": 13,
      "y": 33,
    },
  ],
  "height": 100,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable column with mixed alignSelf on fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 60,
      "x": 8,
      "y": 8,
    },
    {
      "children": [],
      "height": 18,
      "width": 60,
      "x": 50,
      "y": 30,
    },
    {
      "children": [],
      "height": 18,
      "width": 60,
      "x": 92,
      "y": 52,
    },
  ],
  "height": 120,
  "width": 160,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable column with vertical margin on fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 24,
      "x": 8,
      "y": 13,
    },
    {
      "children": [],
      "height": 20,
      "width": 24,
      "x": 8,
      "y": 47,
    },
  ],
  "height": 140,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable column-reverse flex with gap and two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 92,
    },
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 68,
    },
  ],
  "height": 120,
  "width": 160,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable ltr document: descendant dir rtl on inner flex column (rounded) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "height": 20,
          "width": 176,
          "x": 0,
          "y": 0,
        },
        {
          "children": [],
          "height": 20,
          "width": 176,
          "x": 0,
          "y": 26,
        },
      ],
      "height": 96,
      "width": 176,
      "x": 12,
      "y": 12,
    },
  ],
  "height": 120,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable ltr document: descendant dir rtl on inner flex row mirrors child order (rounded) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "height": 56,
          "width": 11,
          "x": 165,
          "y": 0,
        },
        {
          "children": [],
          "height": 56,
          "width": 11,
          "x": 146,
          "y": 0,
        },
      ],
      "height": 56,
      "width": 176,
      "x": 12,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable ltr document: inner flex row with non-ltr/rtl dir uses Yoga inherit (ltr from parent) (rounded) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "height": 56,
          "width": 11,
          "x": 0,
          "y": 0,
        },
        {
          "children": [],
          "height": 56,
          "width": 11,
          "x": 19,
          "y": 0,
        },
      ],
      "height": 56,
      "width": 176,
      "x": 12,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable ltr row with dir auto on Latin and Hebrew text (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 12,
      "y": 12,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 60,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable ltr row with per-node rtl and ltr text dir (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 12,
      "y": 12,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 60,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable narrow row: flexShrink on fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 6,
      "y": 6,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 54,
      "y": 6,
    },
  ],
  "height": 44,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row where minWidth exceeds width on first text and second text flexGrows (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 72,
      "x": 8,
      "y": 8,
    },
    {
      "children": [],
      "height": 20,
      "width": 106,
      "x": 86,
      "y": 8,
    },
  ],
  "height": 56,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with alignItems baseline and mixed font sizes (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 40,
      "x": 8,
      "y": 14,
    },
    {
      "children": [],
      "height": 24,
      "width": 48,
      "x": 56,
      "y": 8,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with alignItems flex-end and mixed-height text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 32,
      "x": 8,
      "y": 52,
    },
    {
      "children": [],
      "height": 40,
      "width": 32,
      "x": 46,
      "y": 32,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with fixed-width text and flexGrow sibling (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 28,
      "x": 8,
      "y": 8,
    },
    {
      "children": [],
      "height": 20,
      "width": 132,
      "x": 40,
      "y": 8,
    },
  ],
  "height": 60,
  "width": 180,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with gap and two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 12,
      "y": 12,
    },
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 31,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with horizontal margin on fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 24,
      "x": 14,
      "y": 8,
    },
    {
      "children": [],
      "height": 20,
      "width": 24,
      "x": 54,
      "y": 8,
    },
  ],
  "height": 50,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with justifyContent center and two fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 24,
      "x": 72,
      "y": 12,
    },
    {
      "children": [],
      "height": 20,
      "width": 24,
      "x": 104,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with maxWidth capping a text child and flexGrow sibling (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 64,
      "x": 8,
      "y": 8,
    },
    {
      "children": [],
      "height": 20,
      "width": 134,
      "x": 78,
      "y": 8,
    },
  ],
  "height": 56,
  "width": 220,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with space-between and two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 12,
      "y": 12,
    },
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 177,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with square aspectRatio box and text sibling (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 40,
      "width": 40,
      "x": 8,
      "y": 30,
    },
    {
      "children": [],
      "height": 20,
      "width": 48,
      "x": 56,
      "y": 40,
    },
  ],
  "height": 100,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with text and image siblings (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 36,
      "x": 8,
      "y": 30,
    },
    {
      "children": [],
      "height": 48,
      "width": 48,
      "x": 52,
      "y": 16,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row with text and scene3d siblings (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 36,
      "x": 8,
      "y": 30,
    },
    {
      "children": [],
      "height": 48,
      "width": 48,
      "x": 52,
      "y": 16,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row: equal flexGrow with flexBasis 0 splits free space between text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 97,
      "x": 8,
      "y": 8,
    },
    {
      "children": [],
      "height": 20,
      "width": 97,
      "x": 115,
      "y": 8,
    },
  ],
  "height": 52,
  "width": 220,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable row-reverse with gap and two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 177,
      "y": 12,
    },
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 158,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl root column stacks two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 10,
    },
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 34,
    },
  ],
  "height": 120,
  "width": 160,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl root column with space-between and two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 10,
    },
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 92,
    },
  ],
  "height": 120,
  "width": 160,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl root column-reverse stacks two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 92,
    },
    {
      "children": [],
      "height": 18,
      "width": 140,
      "x": 10,
      "y": 68,
    },
  ],
  "height": 120,
  "width": 160,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl root row mirrors two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 177,
      "y": 12,
    },
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 158,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl root row-reverse with gap and two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 12,
      "y": 12,
    },
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 31,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl root wrapped row with three fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 60,
      "y": 0,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 16,
      "y": 0,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 60,
      "y": 62,
    },
  ],
  "height": 120,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl root wrapped row-reverse with three fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 60,
      "y": 100,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 16,
      "y": 100,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 60,
      "y": 38,
    },
  ],
  "height": 120,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl root: inner flex row with dir auto inherits rtl document direction (rounded) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "height": 56,
          "width": 11,
          "x": 165,
          "y": 0,
        },
        {
          "children": [],
          "height": 56,
          "width": 11,
          "x": 146,
          "y": 0,
        },
      ],
      "height": 56,
      "width": 176,
      "x": 12,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable rtl row with space-between and two text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 177,
      "y": 12,
    },
    {
      "children": [],
      "height": 56,
      "width": 11,
      "x": 12,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable text-in-padded-box layout (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 56,
      "width": 20,
      "x": 12,
      "y": 12,
    },
  ],
  "height": 80,
  "width": 200,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable wrapped row with alignContent space-between and four fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 0,
      "y": 0,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 44,
      "y": 0,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 0,
      "y": 80,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 44,
      "y": 80,
    },
  ],
  "height": 100,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`geometry snapshot CI > stable wrapped row with three fixed-width text children (rounded) 1`] = `
{
  "children": [
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 0,
      "y": 0,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 44,
      "y": 0,
    },
    {
      "children": [],
      "height": 20,
      "width": 40,
      "x": 0,
      "y": 62,
    },
  ],
  "height": 120,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;
